finished hw Ithink

--- a/HW3/HW3_assignment_starter.ipynb
+++ b/HW3/HW3_assignment_starter.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     "    sum = 1\n",
     "\n",
     "    for val in prob:\n",
-    "        sum -= val**2\n",
+    "        sum -= (val**2)\n",
     "\n",
     "    return sum\n",
     "\n",
@@ -178,9 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The information gain using entropy: \n0.09644896916961382\nThe information gain using gini: \n0.014286077889231807\n"
+    }
+   ],
    "source": [
     "# information gain (IG)\n",
     "\n",
@@ -204,16 +210,46 @@
     "    \"\"\"\n",
     "    ##your implementation goes here\n",
     "    pass\n",
+    "    array = dataset[feature].to_numpy()\n",
+    "    num_items = array.size\n",
+    "    values, counts = np.unique(array, return_counts=True)\n",
+    "    prob = counts / num_items\n",
+    "    grouped = dataset.groupby(dataset[feature])\n",
+    "    groups = []\n",
+    "    for item in values:\n",
+    "        groups.append(grouped.get_group(item))\n",
+    "\n",
+    "    if measure.lower() == 'gini':\n",
+    "        gini_val = gini(target, dataset)\n",
+    "        for i in range(len(groups)):\n",
+    "            gini_val -= (prob[i] * gini(target,groups[i]))\n",
+    "        return gini_val\n",
     "\n",
     "\n",
-    "# IG('buying','evaluation', edf, 'gini') "
+    "    if measure.lower() == 'entropy':\n",
+    "        entropy_val = entropy2(target, dataset)\n",
+    "        for i in range(len(groups)):\n",
+    "            entropy_val -= (prob[i] * entropy2(target,groups[i]))\n",
+    "        return entropy_val\n",
+    "\n",
+    "\n",
+    "print('The information gain using entropy: ')\n",
+    "print(IG('buying','evaluation', edf, 'entropy'))\n",
+    "print('The information gain using gini: ')\n",
+    "print(IG('buying','evaluation', edf, 'gini'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Features with the most infomration gain with gini\n['safety', 'persons']\nFeatures with the most information gain with entropy\n['safety', 'persons']\n"
+    }
+   ],
    "source": [
     "def IUFS(target, dataset, k, measure='entropy'):\n",
     "    \"\"\"Finds k most informative features in the given dataset based on the target variable\n",
@@ -237,8 +273,39 @@
     "    \"\"\"\n",
     "    ##your implementation goes here\n",
     "    pass\n",
+    "    col_list = dataset.columns\n",
     "\n",
-    "# IUFS('evaluation', edf, 2, measure='entropy')"
+    "    ig_list = []\n",
+    "    val_list = []\n",
+    "\n",
+    "    \n",
+    "    for i in range(len(col_list)-1):\n",
+    "        #print(IG(col_list[i], target, dataset, measure))\n",
+    "        ig_list.append([col_list[i],IG(col_list[i], target, dataset, measure)])\n",
+    "        val_list.append(IG(col_list[i], target, dataset, measure))\n",
+    "\n",
+    "    d = {}\n",
+    "    arr = np.array(val_list)\n",
+    "    arr.sort()\n",
+    "    for lst in ig_list:\n",
+    "        d[lst[1]] = lst[0]\n",
+    "\n",
+    "    return_list = []\n",
+    "    for i in range(k):\n",
+    "        return_list.append(d[arr[-i-1]])\n",
+    "\n",
+    "    return(return_list)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "print('Features with the most infomration gain with gini')\n",
+    "print(IUFS('evaluation', edf, 2, measure='gini'))\n",
+    "\n",
+    "print('Features with the most information gain with entropy')\n",
+    "print(IUFS('evaluation', edf, 2, measure='entropy'))"
    ]
   },
   {
@@ -251,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
