Finished bounus for hw3

--- a/HW3/HW3_assignment_starter.ipynb
+++ b/HW3/HW3_assignment_starter.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Devang Patel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Homework 3\n",
     "In this homework assignment, you will implement a univariate feature selection method. \n",
     "\n",
@@ -17,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +32,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import entropy"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -68,13 +74,13 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "entropy: \n2.0\nverify results with scipy entropy function: \n2.0\n"
+     "text": "entropy: \n2.0\n"
     }
    ],
    "source": [
     "# entropy (H)\n",
     "\n",
-    "def entropy2(feature, dataset):\n",
+    "def entropy(feature, dataset):\n",
     "    \"\"\"Calculates the entropy of a feature in a given dataset.\n",
     "    \n",
     "    Parameters\n",
@@ -114,19 +120,12 @@
     "    \n",
     "\n",
     "print('entropy: ')\n",
-    "print(entropy2('buying', edf))\n",
-    "\n",
-    "#verify results with scipy entropy function\n",
-    "print('verify results with scipy entropy function: ')\n",
-    "t_array = edf['buying'].to_numpy()\n",
-    "values, counts = np.unique(t_array, return_counts=True)\n",
-    "print(entropy(counts, base = 2))\n",
-    ""
+    "print(entropy('buying', edf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,11 +225,14 @@
     "        return gini_val\n",
     "\n",
     "\n",
-    "    if measure.lower() == 'entropy':\n",
-    "        entropy_val = entropy2(target, dataset)\n",
+    "    elif measure.lower() == 'entropy':\n",
+    "        entropy_val = entropy(target, dataset)\n",
     "        for i in range(len(groups)):\n",
-    "            entropy_val -= (prob[i] * entropy2(target,groups[i]))\n",
+    "            entropy_val -= (prob[i] * entropy(target,groups[i]))\n",
     "        return entropy_val\n",
+    "\n",
+    "    else:\n",
+    "        print('Input a valid measure type')\n",
     "\n",
     "\n",
     "print('The information gain using entropy: ')\n",
@@ -241,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Features with the most infomration gain with gini\n['safety', 'persons']\nFeatures with the most information gain with entropy\n['safety', 'persons']\n"
+     "text": "Features with the most infomration gain with gini:\n['safety', 'persons']\nFeatures with the most information gain with entropy:\n['safety', 'persons']\n"
     }
    ],
    "source": [
@@ -273,9 +275,12 @@
     "    \"\"\"\n",
     "    ##your implementation goes here\n",
     "    pass\n",
+    "    #list of all the features in the dataset\n",
     "    col_list = dataset.columns\n",
     "\n",
+    "    #list of the infomation gains with corisponding feature\n",
     "    ig_list = []\n",
+    "    #list of all information gains\n",
     "    val_list = []\n",
     "\n",
     "    \n",
@@ -284,27 +289,31 @@
     "        ig_list.append([col_list[i],IG(col_list[i], target, dataset, measure)])\n",
     "        val_list.append(IG(col_list[i], target, dataset, measure))\n",
     "\n",
+    "    #dictionary with information gain as key and feature nameas as values\n",
     "    d = {}\n",
-    "    arr = np.array(val_list)\n",
-    "    arr.sort()\n",
     "    for lst in ig_list:\n",
     "        d[lst[1]] = lst[0]\n",
+    "    \n",
+    "    #sort the array so we can find the 2 largest values later\n",
+    "    arr = np.array(val_list)\n",
+    "    arr.sort()\n",
+    "    #print(arr)\n",
+    "    \n",
     "\n",
     "    return_list = []\n",
+    "    #make a list to retur with the 2 values at the end of the array and matching them to corisponding values in the dictionary \n",
     "    for i in range(k):\n",
     "        return_list.append(d[arr[-i-1]])\n",
     "\n",
     "    return(return_list)\n",
     "\n",
-    "    \n",
-    "    \n",
     "\n",
     "\n",
     "\n",
-    "print('Features with the most infomration gain with gini')\n",
+    "print('Features with the most infomration gain with gini:')\n",
     "print(IUFS('evaluation', edf, 2, measure='gini'))\n",
     "\n",
-    "print('Features with the most information gain with entropy')\n",
+    "print('Features with the most information gain with entropy:')\n",
     "print(IUFS('evaluation', edf, 2, measure='entropy'))"
    ]
   },
@@ -320,7 +329,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Gain ratio for gini:\n0.019048103852309078\nGain ratio for entropy: \n0.04822448458480691\n"
+    }
+   ],
    "source": [
     "def GR(feature, target, dataset, measure):\n",
     "    \"\"\"Calculates the gain ratio of a feature for a given target variable and a dataset.\n",
@@ -341,17 +356,42 @@
     "        gain ratio for the feature in the dataset for a given target variable\n",
     "    \"\"\"\n",
     "    ##your implementation goes here\n",
+    "    #gain ratio is infomation gain / entropy of the descriptive feature\n",
     "    pass\n",
     "\n",
+    "    info_gain = IG(feature, target, dataset, measure)\n",
     "\n",
-    "# GR('buying','evaluation', edf, 'gini') "
+    "    if measure.lower() == 'gini':\n",
+    "        output = info_gain / gini(feature, dataset)\n",
+    "        return output\n",
+    "\n",
+    "    elif measure.lower() == 'entropy':\n",
+    "        output = info_gain / entropy(feature, dataset)\n",
+    "        return output\n",
+    "\n",
+    "    else:\n",
+    "        print('Input a valid measure type')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('Gain ratio for gini:')\n",
+    "print(GR('buying','evaluation', edf, 'gini'))\n",
+    "\n",
+    "print('Gain ratio for entropy: ')\n",
+    "print(GR('buying','evaluation', edf, 'entropy'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "IUFS2 with gain ratio:\n['safety', 'persons']\nIUFS2 with infomation gain:\n['safety', 'persons']\n"
+    }
+   ],
    "source": [
     "def IUFS2(target, dataset, k, measure='entropy', gain='IG'):\n",
     "    \"\"\"Finds k most informative features in the given dataset based on the target variable\n",
@@ -376,10 +416,53 @@
     "        returns a list of k feature names, selected based on univariate selection schema\n",
     "    \"\"\"\n",
     "    ##your implementation goes here\n",
+    "\n",
+    "    #reyccled code fom IUFS with just a set of if statments to use gain ratio or information gain\n",
     "    pass\n",
     "\n",
-    "# IUFS2('evaluation', edf, 2, measure='gini', gain='GR')"
+    "    col_list = dataset.columns\n",
+    "\n",
+    "    ig_list = []\n",
+    "    val_list = []\n",
+    "\n",
+    "\n",
+    "    if gain == 'GR':\n",
+    "        for i in range(len(col_list)-1):\n",
+    "            ig_list.append([col_list[i],GR(col_list[i], target, dataset, measure)])\n",
+    "            val_list.append(GR(col_list[i], target, dataset, measure))\n",
+    "\n",
+    "    elif gain == 'IG':\n",
+    "        for i in range(len(col_list)-1):\n",
+    "            ig_list.append([col_list[i],IG(col_list[i], target, dataset, measure)])\n",
+    "            val_list.append(IG(col_list[i], target, dataset, measure))\n",
+    "    else:\n",
+    "        print('Input a valid gain type')\n",
+    "\n",
+    "    d = {}\n",
+    "    arr = np.array(val_list)\n",
+    "    arr.sort()\n",
+    "    for lst in ig_list:\n",
+    "        d[lst[1]] = lst[0]\n",
+    "\n",
+    "    return_list = []\n",
+    "    for i in range(k):\n",
+    "        return_list.append(d[arr[-i-1]])\n",
+    "\n",
+    "    return(return_list)\n",
+    "\n",
+    "    \n",
+    "print('IUFS2 with gain ratio:')\n",
+    "print(IUFS2('evaluation', edf, 2, measure='gini', gain='GR'))\n",
+    "print('IUFS2 with infomation gain:')\n",
+    "print(IUFS2('evaluation', edf, 2, measure='gini', gain='IG'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
