--- a/Project/Devang_Patel_Project_Part2.ipynb
+++ b/Project/Devang_Patel_Project_Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,34 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "   Unnamed: 0  age  sex  trestbps  chol  fbs  thalach  exang  oldpeak  ca  \\\n0           0   63    1       145   233    1      150      0      2.3   0   \n1           1   37    1       130   250    0      187      0      3.5   0   \n2           2   41    0       130   204    0      172      0      1.4   0   \n3           3   56    1       120   236    0      178      0      0.8   0   \n4           4   57    0       120   354    0      163      1      0.6   0   \n\n   ...  restecg_0  restecg_1  restecg_2  slope_0  slope_1  slope_2  thal_0  \\\n0  ...          1          0          0        1        0        0       0   \n1  ...          0          1          0        1        0        0       0   \n2  ...          1          0          0        0        0        1       0   \n3  ...          0          1          0        0        0        1       0   \n4  ...          0          1          0        0        0        1       0   \n\n   thal_1  thal_2  thal_3  \n0       1       0       0  \n1       0       1       0  \n2       0       1       0  \n3       0       1       0  \n4       0       1       0  \n\n[5 rows x 25 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>age</th>\n      <th>sex</th>\n      <th>trestbps</th>\n      <th>chol</th>\n      <th>fbs</th>\n      <th>thalach</th>\n      <th>exang</th>\n      <th>oldpeak</th>\n      <th>ca</th>\n      <th>...</th>\n      <th>restecg_0</th>\n      <th>restecg_1</th>\n      <th>restecg_2</th>\n      <th>slope_0</th>\n      <th>slope_1</th>\n      <th>slope_2</th>\n      <th>thal_0</th>\n      <th>thal_1</th>\n      <th>thal_2</th>\n      <th>thal_3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>0</td>\n      <td>63</td>\n      <td>1</td>\n      <td>145</td>\n      <td>233</td>\n      <td>1</td>\n      <td>150</td>\n      <td>0</td>\n      <td>2.3</td>\n      <td>0</td>\n      <td>...</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>1</td>\n      <td>37</td>\n      <td>1</td>\n      <td>130</td>\n      <td>250</td>\n      <td>0</td>\n      <td>187</td>\n      <td>0</td>\n      <td>3.5</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>2</td>\n      <td>41</td>\n      <td>0</td>\n      <td>130</td>\n      <td>204</td>\n      <td>0</td>\n      <td>172</td>\n      <td>0</td>\n      <td>1.4</td>\n      <td>0</td>\n      <td>...</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>3</td>\n      <td>56</td>\n      <td>1</td>\n      <td>120</td>\n      <td>236</td>\n      <td>0</td>\n      <td>178</td>\n      <td>0</td>\n      <td>0.8</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>4</td>\n      <td>57</td>\n      <td>0</td>\n      <td>120</td>\n      <td>354</td>\n      <td>0</td>\n      <td>163</td>\n      <td>1</td>\n      <td>0.6</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 25 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0    1\n1    1\n2    1\n3    1\n4    1\nName: target, dtype: int64\n   Unnamed: 0  age  sex  trestbps  chol  fbs  thalach  exang  oldpeak  ca  \\\n0           0   63    1       145   233    1      150      0      2.3   0   \n1           1   37    1       130   250    0      187      0      3.5   0   \n2           2   41    0       130   204    0      172      0      1.4   0   \n3           3   56    1       120   236    0      178      0      0.8   0   \n4           4   57    0       120   354    0      163      1      0.6   0   \n\n   ...  restecg_0  restecg_1  restecg_2  slope_0  slope_1  slope_2  thal_0  \\\n0  ...          1          0          0        1        0        0       0   \n1  ...          0          1          0        1        0        0       0   \n2  ...          1          0          0        0        0        1       0   \n3  ...          0          1          0        0        0        1       0   \n4  ...          0          1          0        0        0        1       0   \n\n   thal_1  thal_2  thal_3  \n0       1       0       0  \n1       0       1       0  \n2       0       1       0  \n3       0       1       0  \n4       0       1       0  \n\n[5 rows x 24 columns]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = df.drop(columns = ['target'])\n",
     "y = df['target']\n",
@@ -67,57 +51,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0.8316831683168316\n0.900990099009901\n0.8811881188118812\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gnb = GaussianNB()\n",
+    "scores = []\n",
     "kf = KFold(n_splits = 3, shuffle=True, random_state=22)\n",
+    "gnb_table = pd.DataFrame(columns = ['accuracy'], index = ['Fold 1', 'Fold 2', 'Fold 3'])\n",
     "for train, test in kf.split(X):\n",
     "    gnb.fit(X.iloc[train], y.iloc[train])\n",
-    "    print(gnb.score(X.iloc[test], y.iloc[test]))"
+    "    scores.append(gnb.score(X.iloc[test], y.iloc[test]))\n",
+    "\n",
+    "\n",
+    "print(scores)\n",
+    "gnb_table['accuracy'] = scores\n",
+    "gnb_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0.7128712871287128\n0.900990099009901\n0.9702970297029703\n0.9900990099009901\n0.9900990099009901\n\n\n0.7524752475247525\n0.9108910891089109\n0.9603960396039604\n0.9702970297029703\n1.0\n\n\n0.801980198019802\n0.9504950495049505\n0.9801980198019802\n0.9900990099009901\n0.9801980198019802\n\n\n"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "forest_size = [1, 5, 10, 50, 100]\n",
     "kf = KFold(n_splits = 3, shuffle=True, random_state=22)\n",
+    "forest_table = pd.DataFrame(columns = forest_size)\n",
+    "\n",
     "for train, test in kf.split(X):\n",
+    "    socres = pd.DataFrame\n",
     "    for count in forest_size:\n",
     "        rand_forest = RandomForestClassifier(criterion='gini', n_estimators=count, max_depth=3, random_state=0, n_jobs=-1)\n",
     "        rand_forest.fit(X.iloc[train], y.iloc[train])\n",
-    "        print(rand_forest.score(X.iloc[test], y.iloc[test]))\n",
-    "    print()\n",
-    "    print()"
+    "        scores.append(rand_forest.score(X.iloc[test], y.iloc[test]))\n",
+    "    forest_table.append(socres)\n",
+    "        \n",
+    "    # print()\n",
+    "    # print()\n",
+    "forest_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0.9702970297029703\n0.9801980198019802\n0.9900990099009901\n0.9900990099009901\n0.9900990099009901\n0.9801980198019802\n0.9801980198019802\n0.9702970297029703\n0.9801980198019802\n0.9702970297029703\n0.9801980198019802\n0.9702970297029703\n0.9801980198019802\n0.9900990099009901\n0.9900990099009901\n0.9900990099009901\n1.0\n1.0\n1.0\n\n\n0.9603960396039604\n0.9702970297029703\n0.9603960396039604\n0.9801980198019802\n0.9504950495049505\n0.9504950495049505\n0.9405940594059405\n0.9504950495049505\n0.9405940594059405\n0.9504950495049505\n0.9702970297029703\n0.9900990099009901\n0.9801980198019802\n1.0\n0.9900990099009901\n1.0\n0.9900990099009901\n0.9900990099009901\n0.9900990099009901\n\n\n0.9801980198019802\n0.9801980198019802\n1.0\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9801980198019802\n0.9900990099009901\n\n\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "kf = KFold(n_splits = 3, shuffle=True, random_state=22)\n",
