--- a/HW4/HW4_starter.ipynb
+++ b/HW4/HW4_starter.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "text/plain": "{'TP': 3, 'FN': 1, 'FP': 2, 'TN': 4}"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 31
     }
    ],
    "source": [
@@ -105,16 +105,16 @@
     "    # print(scores)\n",
     "\n",
     "    for i in range(len(scores)):\n",
-    "        if(scores[i] == 1 and Y_test[i] == 1):\n",
+    "        if(scores[i] == 1 and observation[i] == 1):\n",
     "            bcmd['TP'] = (bcmd['TP'] + 1)\n",
     "\n",
-    "        elif(scores[i] == 1 and Y_test[i] == 0):\n",
+    "        elif(scores[i] == 1 and observation[i] == 0):\n",
     "            bcmd['FP'] = (bcmd['FP'] + 1)\n",
     "\n",
-    "        elif(scores[i] == 0 and Y_test[i] == 1):\n",
+    "        elif(scores[i] == 0 and observation[i] == 1):\n",
     "            bcmd['FN'] = (bcmd['FN'] + 1)\n",
     "\n",
-    "        elif(scores[i] == 0 and Y_test[i] == 0):\n",
+    "        elif(scores[i] == 0 and observation[i] == 0):\n",
     "            bcmd['TN'] = (bcmd['TN'] + 1)\n",
     "\n",
     "    return bcmd\n",
@@ -141,31 +141,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.7\n0.6\n0.75\n0.6666666666666665\n"
+    }
+   ],
    "source": [
     "def accuracy(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
-    "\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    acc = ((matrix['TP'] + matrix['TN']) / np.array(list(matrix.values())).sum())\n",
+    "    return acc\n",
     "def precision(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    per = (matrix['TP'] / (matrix['TP'] + matrix['FP']))\n",
+    "    return per\n",
     "\n",
     "def recall(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    re = (matrix['TP'] / (matrix['TP'] + matrix['FN']))\n",
+    "    return re\n",
     "\n",
     "def f1score(observation, p_scores, threshold):\n",
     "    # your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    pers = precision(observation, p_scores, threshold)\n",
+    "    rec = recall(observation, p_scores, threshold)\n",
+    "    f1 = 2*((pers*rec)/(pers+rec))\n",
+    "    return f1\n",
     "\n",
     "# test your code using the following\n",
-    "# accuracy( Y_test, P_scores, threshold )\n",
-    "# precision( Y_test, P_scores, threshold )\n",
-    "# recall( Y_test, P_scores, threshold )\n",
-    "# f1score( Y_test, P_scores, threshold )"
+    "print(accuracy( Y_test, P_scores, threshold ))\n",
+    "print(precision( Y_test, P_scores, threshold ))\n",
+    "print(recall( Y_test, P_scores, threshold ))\n",
+    "print(f1score( Y_test, P_scores, threshold ))"
    ]
   },
   {
