Finisehd through hw4 q6

--- a/HW4/HW4_starter.ipynb
+++ b/HW4/HW4_starter.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "text/plain": "{'TP': 3, 'FN': 1, 'FP': 2, 'TN': 4}"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 21
     }
    ],
    "source": [
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.7\n0.6\n0.75\n0.6666666666666665\n"
+     "text": "Accuracy: 0.700\nPercision: 0.600\nRecall: 0.750\nF1 Score: 0.667\n"
     }
    ],
    "source": [
@@ -181,10 +181,10 @@
     "    return f1\n",
     "\n",
     "# test your code using the following\n",
-    "print(accuracy( Y_test, P_scores, threshold ))\n",
-    "print(precision( Y_test, P_scores, threshold ))\n",
-    "print(recall( Y_test, P_scores, threshold ))\n",
-    "print(f1score( Y_test, P_scores, threshold ))"
+    "print('Accuracy: {0:.03f}'.format(accuracy( Y_test, P_scores, threshold )))\n",
+    "print('Percision: {0:.03f}'.format(precision( Y_test, P_scores, threshold )))\n",
+    "print('Recall: {0:.03f}'.format(recall( Y_test, P_scores, threshold )))\n",
+    "print('F1 Score: {0:.03f}'.format(f1score( Y_test, P_scores, threshold )))"
    ]
   },
   {
@@ -199,19 +199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "BIAS Score: 0.714\n"
+    }
+   ],
    "source": [
     "# bias score\n",
     "\n",
     "def bias_score(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    return ((matrix['TP'] + matrix['FP']) / (matrix['TP'] + matrix['TN']))\n",
+    "\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "# bias_score(Y_test, P_scores, threshold)"
+    "print('BIAS Score: {0:.03f}'.format(bias_score(Y_test, P_scores, threshold)))"
    ]
   },
   {
@@ -227,17 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "False Alarm Ratio: 0.400\n"
+    }
+   ],
    "source": [
     "def far(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    return (matrix['FP'] / (matrix['TP'] + matrix['FP']))\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "# far(Y_test, P_scores, threshold)"
+    "print('False Alarm Ratio: {0:.03f}'.format(far(Y_test, P_scores, threshold)))"
    ]
   },
   {
@@ -253,17 +270,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Critical Success Index: 0.500\n"
+    }
+   ],
    "source": [
     "def csi(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    return (matrix['TP'] / (matrix['TP'] + matrix['FN'] + matrix['FP']))\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "# csi(Y_test, P_scores, threshold)"
+    "print('Critical Success Index: {0:.03f}'.format(csi(Y_test, P_scores, threshold)))"
    ]
   },
   {
@@ -278,17 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Treu Skill Statistic: 0.417\n"
+    }
+   ],
    "source": [
     "def tss(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    part1 = (matrix['TP'] / (matrix['TP'] + matrix['FN']))\n",
+    "    part2 = (matrix['FP'] / (matrix['FP'] + matrix['TN']))\n",
+    "    return part1 - part2\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "# tss(Y_test, P_scores, threshold)"
+    "print('Treu Skill Statistic: {0:.03f}'.format(tss(Y_test, P_scores, threshold)))"
    ]
   },
   {
@@ -311,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
