--- a/HW4/HW4_starter.ipynb
+++ b/HW4/HW4_starter.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "text/plain": "{'TP': 3, 'FN': 1, 'FP': 2, 'TN': 4}"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 3
     }
    ],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,17 +346,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Gilbert Skill Score: 0.500\n"
+    }
+   ],
    "source": [
     "def gss(observation, p_scores, threshold):\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    matrix = binary_conf_matrix(observation, p_scores, threshold)\n",
+    "    hr = ((matrix['TP'] + matrix['FN']) * (matrix['TP'] + matrix['FP']) / np.array(list(matrix.values())).sum())\n",
+    "    \n",
+    "    return ((matrix['TP'] - hr) / (matrix['TP'] + matrix['FN'] - hr))\n",
+    "\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "#gss(Y_test, P_scores, threshold)"
+    "print('Gilbert Skill Score: {0:.03f}'.format(gss(Y_test, P_scores, threshold)))"
    ]
   },
   {
@@ -370,9 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Best threshold hold for CSI is: 0.4\n"
+    }
+   ],
    "source": [
     "def pick_threshold(observation, p_scores, mfunc):\n",
     "    '''Finds the prediction score threshold that returns the highest performance measure value \n",
@@ -396,10 +413,19 @@
     "    '''\n",
     "    #your code goes here\n",
     "    pass\n",
+    "    threshold_scores = []\n",
+    "    thresholds = np.linspace(0,1,11)\n",
+    "    #print(thresholds)\n",
+    "    for step in thresholds:\n",
+    "        threshold_scores.append(mfunc(observation, p_scores, step))\n",
+    "    #print(threshold_scores)\n",
+    "    max_score = np.array(threshold_scores).max()\n",
+    "    return thresholds[threshold_scores.index(max_score)]\n",
+    "\n",
     "\n",
     "\n",
     "# test your code using the following\n",
-    "# pick_threshold(Y_test, P_scores, csi)"
+    "print('Best threshold hold for CSI is: {0}'.format(pick_threshold(Y_test, P_scores, csi)))"
    ]
   }
  ],
